--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "sqlite": "^5.1.1",
-    "sqlite3": "^5.1.7",
-    "typescript": "^5.3.3"
+    "sqlite3": "^5.1.7"
   },
   "type": "module"
 }
